src/custom/prelude/snapshots/hugr_llvm__custom__prelude__array__test__prelude_array_ops@pre-mem2reg@llvm14.snap
---
source: src/custom/prelude/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@1 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define void @_hl.main.1([1 x { i32, {}, {} }] %0) {
alloca_block:
  %"18_0" = alloca { i32, {}, {} }, align 8
  %"5_0" = alloca i64, align 8
  %"2_0" = alloca [1 x { i32, {}, {} }], align 8
  %"19_0" = alloca { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } }, align 8
  %"22_0" = alloca { i32, {}, {} }, align 8
  %"22_1" = alloca [1 x { i32, {}, {} }], align 8
  %"0" = alloca { i32, {}, {} }, align 8
  %"1" = alloca [1 x { i32, {}, {} }], align 8
  %"07" = alloca { i32, {}, {} }, align 8
  %"18" = alloca [1 x { i32, {}, {} }], align 8
  %"27_0" = alloca { i32, i8* }, align 8
  %"24_0" = alloca { i32, {}, {} }, align 8
  %"24_1" = alloca [1 x { i32, {}, {} }], align 8
  %"28_0" = alloca { i32, {}, {} }, align 8
  %"28_1" = alloca [1 x { i32, {}, {} }], align 8
  %"016" = alloca { i32, {}, {} }, align 8
  %"117" = alloca [1 x { i32, {}, {} }], align 8
  %"30_0" = alloca { i32, {}, {} }, align 8
  %"30_1" = alloca [1 x { i32, {}, {} }], align 8
  %"6_0" = alloca { i32, {}, { { i32, {}, {} } } }, align 8
  %"7_0" = alloca { i32, {}, {} }, align 8
  %"025" = alloca { i32, {}, {} }, align 8
  %"12_0" = alloca { i32, i8* }, align 8
  %"13_0" = alloca { i32, {}, {} }, align 8
  %"029" = alloca { i32, {}, {} }, align 8
  %"15_0" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} }* %"18_0", align 4
  store i64 0, i64* %"5_0", align 4
  store [1 x { i32, {}, {} }] %0, [1 x { i32, {}, {} }]* %"2_0", align 4
  %"2_01" = load [1 x { i32, {}, {} }], [1 x { i32, {}, {} }]* %"2_0", align 4
  %"5_02" = load i64, i64* %"5_0", align 4
  %"18_03" = load { i32, {}, {} }, { i32, {}, {} }* %"18_0", align 4
  %1 = alloca { i32, {}, {} }, align 8
  %2 = bitcast { i32, {}, {} }* %1 to [1 x { i32, {}, {} }]*
  store [1 x { i32, {}, {} }] %"2_01", [1 x { i32, {}, {} }]* %2, align 4
  %3 = getelementptr { i32, {}, {} }, { i32, {}, {} }* %1, i64 %"5_02"
  %4 = load { i32, {}, {} }, { i32, {}, {} }* %3, align 4
  store { i32, {}, {} } %"18_03", { i32, {}, {} }* %3, align 4
  %5 = bitcast { i32, {}, {} }* %1 to [1 x { i32, {}, {} }]*
  %6 = load [1 x { i32, {}, {} }], [1 x { i32, {}, {} }]* %5, align 4
  %7 = insertvalue { { i32, {}, {} }, [1 x { i32, {}, {} }] } undef, { i32, {}, {} } %4, 0
  %8 = insertvalue { { i32, {}, {} }, [1 x { i32, {}, {} }] } %7, [1 x { i32, {}, {} }] %6, 1
  %9 = insertvalue { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } } { i32 1, { { i32, {}, {} }, [1 x { i32, {}, {} }] } poison, { { i32, {}, {} }, [1 x { i32, {}, {} }] } poison }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } %8, 2
  %10 = insertvalue { { i32, {}, {} }, [1 x { i32, {}, {} }] } undef, { i32, {}, {} } %"18_03", 0
  %11 = insertvalue { { i32, {}, {} }, [1 x { i32, {}, {} }] } %10, [1 x { i32, {}, {} }] %"2_01", 1
  %12 = insertvalue { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } } { i32 0, { { i32, {}, {} }, [1 x { i32, {}, {} }] } poison, { { i32, {}, {} }, [1 x { i32, {}, {} }] } poison }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } %11, 1
  %13 = icmp ult i64 %"5_02", 1
  %14 = select i1 %13, { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } } %9, { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } } %12
  store { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } } %14, { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } }* %"19_0", align 4
  %"19_04" = load { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } }, { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } }* %"19_0", align 4
  %15 = extractvalue { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } } %"19_04", 0
  switch i32 %15, label %16 [
    i32 1, label %20
  ]

16:                                               ; preds = %entry_block
  %17 = extractvalue { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } } %"19_04", 1
  %18 = extractvalue { { i32, {}, {} }, [1 x { i32, {}, {} }] } %17, 0
  %19 = extractvalue { { i32, {}, {} }, [1 x { i32, {}, {} }] } %17, 1
  store { i32, {}, {} } %18, { i32, {}, {} }* %"07", align 4
  store [1 x { i32, {}, {} }] %19, [1 x { i32, {}, {} }]* %"18", align 4
  br label %cond_22_case_0

20:                                               ; preds = %entry_block
  %21 = extractvalue { i32, { { i32, {}, {} }, [1 x { i32, {}, {} }] }, { { i32, {}, {} }, [1 x { i32, {}, {} }] } } %"19_04", 2
  %22 = extractvalue { { i32, {}, {} }, [1 x { i32, {}, {} }] } %21, 0
  %23 = extractvalue { { i32, {}, {} }, [1 x { i32, {}, {} }] } %21, 1
  store { i32, {}, {} } %22, { i32, {}, {} }* %"016", align 4
  store [1 x { i32, {}, {} }] %23, [1 x { i32, {}, {} }]* %"117", align 4
  br label %cond_22_case_1

cond_22_case_0:                                   ; preds = %16
  %"09" = load { i32, {}, {} }, { i32, {}, {} }* %"07", align 4
  %"110" = load [1 x { i32, {}, {} }], [1 x { i32, {}, {} }]* %"18", align 4
  store { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @0, i32 0, i32 0) }, { i32, i8* }* %"27_0", align 8
  store { i32, {}, {} } %"09", { i32, {}, {} }* %"24_0", align 4
  store [1 x { i32, {}, {} }] %"110", [1 x { i32, {}, {} }]* %"24_1", align 4
  %"27_011" = load { i32, i8* }, { i32, i8* }* %"27_0", align 8
  %"24_012" = load { i32, {}, {} }, { i32, {}, {} }* %"24_0", align 4
  %"24_113" = load [1 x { i32, {}, {} }], [1 x { i32, {}, {} }]* %"24_1", align 4
  %24 = extractvalue { i32, i8* } %"27_011", 0
  %25 = extractvalue { i32, i8* } %"27_011", 1
  %26 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @prelude.panic_template, i32 0, i32 0), i32 %24, i8* %25)
  call void @abort()
  store { i32, {}, {} } zeroinitializer, { i32, {}, {} }* %"28_0", align 4
  store [1 x { i32, {}, {} }] zeroinitializer, [1 x { i32, {}, {} }]* %"28_1", align 4
  %"28_014" = load { i32, {}, {} }, { i32, {}, {} }* %"28_0", align 4
  %"28_115" = load [1 x { i32, {}, {} }], [1 x { i32, {}, {} }]* %"28_1", align 4
  store { i32, {}, {} } %"28_014", { i32, {}, {} }* %"0", align 4
  store [1 x { i32, {}, {} }] %"28_115", [1 x { i32, {}, {} }]* %"1", align 4
  br label %cond_exit_22

cond_22_case_1:                                   ; preds = %20
  %"018" = load { i32, {}, {} }, { i32, {}, {} }* %"016", align 4
  %"119" = load [1 x { i32, {}, {} }], [1 x { i32, {}, {} }]* %"117", align 4
  store { i32, {}, {} } %"018", { i32, {}, {} }* %"30_0", align 4
  store [1 x { i32, {}, {} }] %"119", [1 x { i32, {}, {} }]* %"30_1", align 4
  %"30_020" = load { i32, {}, {} }, { i32, {}, {} }* %"30_0", align 4
  %"30_121" = load [1 x { i32, {}, {} }], [1 x { i32, {}, {} }]* %"30_1", align 4
  store { i32, {}, {} } %"30_020", { i32, {}, {} }* %"0", align 4
  store [1 x { i32, {}, {} }] %"30_121", [1 x { i32, {}, {} }]* %"1", align 4
  br label %cond_exit_22

cond_exit_22:                                     ; preds = %cond_22_case_1, %cond_22_case_0
  %"05" = load { i32, {}, {} }, { i32, {}, {} }* %"0", align 4
  %"16" = load [1 x { i32, {}, {} }], [1 x { i32, {}, {} }]* %"1", align 4
  store { i32, {}, {} } %"05", { i32, {}, {} }* %"22_0", align 4
  store [1 x { i32, {}, {} }] %"16", [1 x { i32, {}, {} }]* %"22_1", align 4
  %"2_022" = load [1 x { i32, {}, {} }], [1 x { i32, {}, {} }]* %"2_0", align 4
  %"5_023" = load i64, i64* %"5_0", align 4
  %27 = alloca { i32, {}, {} }, align 8
  %28 = bitcast { i32, {}, {} }* %27 to [1 x { i32, {}, {} }]*
  store [1 x { i32, {}, {} }] %"2_022", [1 x { i32, {}, {} }]* %28, align 4
  %29 = getelementptr { i32, {}, {} }, { i32, {}, {} }* %27, i64 %"5_023"
  %30 = load { i32, {}, {} }, { i32, {}, {} }* %29, align 4
  %31 = insertvalue { { i32, {}, {} } } undef, { i32, {}, {} } %30, 0
  %32 = insertvalue { i32, {}, { { i32, {}, {} } } } { i32 1, {} poison, { { i32, {}, {} } } poison }, { { i32, {}, {} } } %31, 2
  %33 = icmp ult i64 %"5_023", 1
  %34 = select i1 %33, { i32, {}, { { i32, {}, {} } } } %32, { i32, {}, { { i32, {}, {} } } } { i32 0, {} undef, { { i32, {}, {} } } poison }
  store { i32, {}, { { i32, {}, {} } } } %34, { i32, {}, { { i32, {}, {} } } }* %"6_0", align 4
  %"6_024" = load { i32, {}, { { i32, {}, {} } } }, { i32, {}, { { i32, {}, {} } } }* %"6_0", align 4
  %35 = extractvalue { i32, {}, { { i32, {}, {} } } } %"6_024", 0
  switch i32 %35, label %36 [
    i32 1, label %38
  ]

36:                                               ; preds = %cond_exit_22
  %37 = extractvalue { i32, {}, { { i32, {}, {} } } } %"6_024", 1
  br label %cond_7_case_0

38:                                               ; preds = %cond_exit_22
  %39 = extractvalue { i32, {}, { { i32, {}, {} } } } %"6_024", 2
  %40 = extractvalue { { i32, {}, {} } } %39, 0
  store { i32, {}, {} } %40, { i32, {}, {} }* %"029", align 4
  br label %cond_7_case_1

cond_7_case_0:                                    ; preds = %36
  store { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @1, i32 0, i32 0) }, { i32, i8* }* %"12_0", align 8
  %"12_027" = load { i32, i8* }, { i32, i8* }* %"12_0", align 8
  %41 = extractvalue { i32, i8* } %"12_027", 0
  %42 = extractvalue { i32, i8* } %"12_027", 1
  %43 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @prelude.panic_template.1, i32 0, i32 0), i32 %41, i8* %42)
  call void @abort()
  store { i32, {}, {} } zeroinitializer, { i32, {}, {} }* %"13_0", align 4
  %"13_028" = load { i32, {}, {} }, { i32, {}, {} }* %"13_0", align 4
  store { i32, {}, {} } %"13_028", { i32, {}, {} }* %"025", align 4
  br label %cond_exit_7

cond_7_case_1:                                    ; preds = %38
  %"030" = load { i32, {}, {} }, { i32, {}, {} }* %"029", align 4
  store { i32, {}, {} } %"030", { i32, {}, {} }* %"15_0", align 4
  %"15_031" = load { i32, {}, {} }, { i32, {}, {} }* %"15_0", align 4
  store { i32, {}, {} } %"15_031", { i32, {}, {} }* %"025", align 4
  br label %cond_exit_7

cond_exit_7:                                      ; preds = %cond_7_case_1, %cond_7_case_0
  %"026" = load { i32, {}, {} }, { i32, {}, {} }* %"025", align 4
  store { i32, {}, {} } %"026", { i32, {}, {} }* %"7_0", align 4
  ret void
}

declare i32 @printf(i8*, ...)

declare void @abort()
